--- a/applications.html
+++ b/applications.html
@@ -20,10 +20,10 @@
                     <tr ng-repeat="app in Apps.record" id="row_{{app.id}}">
                         <td ng-click="showDetails()">{{app.name}}</td>
                         <td class="no-border">
-                            <div class="btn-group">
+                            <div class="btn-group pull-right">
                                 <a class="btn btn-small btn-inverse" ng-click="showAppPreview()"><i
                                         class="icon-eye-open"></i></a>
-                                <a class="btn btn-small btn-inverse" ng-click="showFileManager()"><i
+                                <a ng-show="app.is_url_external == 0" class="btn btn-small btn-inverse" ng-click="showFileManager()"><i
                                         class="icon-folder-open"></i></a>
                                 <a class="btn btn-small btn-inverse" ng-click="delete()"><i class="icon-trash"></i></a>
                             </div>
