Show /app for global mode  in file manager but only for global mode. All file URL's are relative to /rest. Change df-err.js to utils.js in editor.  Display non-session error messages in editor.

--- a/filemanager/index.html
+++ b/filemanager/index.html
@@ -94,7 +94,7 @@
 								</span>
                     </div>
                     <div class="cLeft cLM1 fmToolbar">
-                        PATH:<span id="breadcrumbs">/</span>
+                        PATH:&nbsp;<span id="breadcrumbs">/</span>
                     </div>
                     <div class="cClear"><!--  --></div>
                 </div>
