--- a/filemanager/editor.html
+++ b/filemanager/editor.html
@@ -44,7 +44,7 @@
 <!-- DF Imports -->
 
 <script src="/lib/web-core/js/df.js"></script>
-<script src="/lib/web-core/js/df-err.js"></script>
+<script src="/lib/web-core/js/utils.js"></script>
 <script src="/lib/web-core/js/jquery.js"></script>
 <script src="/lib/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
 <script src="js/editor.js"></script>
