--- a/swagger.html
+++ b/swagger.html
@@ -1,3 +1,3 @@
-<div ng-controller="SwaggerCtrl" id="swagger">
-    <iframe frameBorder=0 ng-src=""></iframe>
+<div ng-controller="SwaggerCtrl" id="swagger" style="display:none">
+    <iframe frameBorder=0 src=""></iframe>
 </div>
