Swagger uses rootScope

--- a/services.html
+++ b/services.html
@@ -14,10 +14,10 @@
                     <tbody>
 
                     <tr ng-repeat="service in Services.record" id="row_{{service.id}}">
-                        <td ng-click='showSwagger()'>{{service.name}}</td>
+                        <td ng-click='showDetails()'>{{service.name}}</td>
                         <td class="no-border">
                             <div class="btn-group pull-right">
-                                <a ng-click="showDetails()" class="btn btn-small btn-inverse" ><i class="icon-edit"></i></a>
+                                <a ng-click="showSwagger()" class="btn btn-small btn-inverse" ><i class="icon-book"></i></a>
                                 <a ng-hide="service.is_system" class="btn btn-small btn-inverse" ng-click="delete()"><i class="icon-trash"></i></a>
                             </div>
                         </td>
@@ -30,6 +30,7 @@
         <td>&nbsp;</td>
         <td id="app-details" class="well">
             <div>
+
                 <div class="detail-view"></div>
 
                 <div class="add_new">
@@ -115,4 +116,5 @@
         </td>
     </tr>
 </table>
+
 
