--- a/import.html
+++ b/import.html
@@ -13,7 +13,7 @@
             <input id="urlInput" type="text" name="url" style="width:300px;"/><button ng-click='uploadPackageUrl()' class="btn btn-primary">Upload</button><br/>
             Sample Apps:<br/>
             <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
-            - A sample application showing how to make RESTful calls to your Document Services Platform (DSP).
+            - A sample application showing how to make RESTful calls to your DreamFactory Services Platform (DSP).
         </form>
         <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" width="100%" height="70px"></iframe>
     </div>
