--- a/services.html
+++ b/services.html
@@ -1,4 +1,3 @@
-<h4>Services<a ng-click="promptForNew()" class="btn btn-small pull-right btn-primary"><li class="icon-plus-sign-alt"></li> Create New Service</a></h4>
 <table style="width:100%" ng-controller="ServiceCtrl">
     <tr>
         <td id="item-list">
@@ -29,6 +28,15 @@
         </td>
         <td>&nbsp;</td>
         <td id="app-details" class="well">
+            <div class="navbar">
+                <div class="navbar-inner"><div class="brand">Services</div>
+                    <div class="btn-group pull-right">
+                        <a ng-click="promptForNew()" class="btn btn-small">
+                            <li class="icon-plus-sign-alt"></li>
+                            Create New Service</a>
+                    </div>
+                </div>
+            </div>
             <div>
 
                 <div class="detail-view"></div>
