refactoring for https

--- a/applications.html
+++ b/applications.html
@@ -105,7 +105,7 @@
                             <div class="alert alert-success local">
                                 <li class="icon-cloud"></li>
                                 &nbsp;Your URL will be:
-                                http://{{currentServer}}/app/{{app.api_name}}<span>{{app.url}}</span></div>
+                                {{currentServer}}/app/{{app.api_name}}<span>{{app.url}}</span></div>
                             <div class="alert alert-success external">Your URL will be:
                                 {{app.url}}
                             </div>
