--- a/services.html
+++ b/services.html
@@ -70,7 +70,13 @@
                         </div>
                         <div class="section parameters">
                             <p>Parameters</p>
-                            <input ng-model="service.parameters" type="text"/>
+                            <div id="grid-container">
+                                <div id="parameter-grid" ng-grid="browseOptions"></div>
+                            </div>
+                            <div style="display:none" id="error-container" class="alert alert-danger">Param already exists</div>
+                            <input id="param-name" placeholder="Param Name" class="input-small" type="text" ng-model="param.name"/><input id="param-value" placeholder="Param Value" type="text" ng-model="param.value"/><br/>
+                            <a id="param-update" class="btn btn-inverse" ng-click="updateParams()"><i class="icon-plus-sign"></i> Add Parameter</a>
+
                         </div>
                         <div class="section dsn">
                             <p>Connection String</p>
@@ -86,7 +92,12 @@
                         </div>
                         <div class="section headers">
                             <p>Headers</p>
-                            <input ng-model="service.headers" type="text"/>
+                            <div >
+                                <div id="header-grid" ng-grid="headerOptions"></div>
+                            </div>
+                            <div style="display:none" id="header-error-container" class="alert alert-danger">Param already exists</div>
+                            <input id="header-name" placeholder="Header Name" class="input-small" type="text" ng-model="header.name"/><input id="header-value" placeholder="Header Value" type="text" ng-model="header.value"/><br/>
+                            <a id="header-update" class="btn btn-inverse" ng-click="updateHeaders()"><i class="icon-plus-sign"></i> Add Header</a>
                         </div>
                         <div class="section">
                             <input ng-checked="service.is_active" type="checkbox" ng-model="service.is_active"/>&nbsp;Active
