--- a/swagger/index.html
+++ b/swagger/index.html
@@ -45,7 +45,7 @@
     <script type="text/javascript">
         $(function () {
             window.swaggerUi = new SwaggerUi({
-                discoveryUrl:"http://" + location.host + "/rest/",
+                discoveryUrl:location.protocol + "//" + location.host + "/rest/",
                 apiKey:"swagger",
                 dom_id:"swagger-ui-container",
                 supportHeaderParams: false,
