--- a/services.html
+++ b/services.html
@@ -46,11 +46,14 @@
                     <div ng-include src="'swagger.html'">
                     </div>
                     <div id="step1">
-                        <div class="section">
+                        <div class="section" ng-show="action=='Update'">
                             <p>Type</p>
-                            <select ng-init="showFields()" ng-change="showFields()" ng-model = "service.type" ng-options="option.name as option.name for option in serviceOptions"></select>
+                            <select ng-disabled = true ng-init="showFields()" ng-change="showFields()" ng-model = "service.type" ng-options="option.name as option.name for option in serviceOptions"></select>
                         </div>
-
+                        <div class="section" ng-show="action!='Update'">
+                            <p>Type</p>
+                            <select ng-init="showFields()" ng-change="showFields()" ng-model = "service.type" ng-options="option.name as option.name for option in serviceCreateOptions"></select>
+                        </div>
 
                         <div class="section">
                             <p>Service Name</p>
@@ -58,7 +61,7 @@
                         </div>
                         <div class="section">
                             <p>API Name</p>
-                            <input ng-model="service.api_name" type="text"/>
+                            <input ng-disabled = "service.is_system" ng-model="service.api_name" type="text"/>
                         </div>
                         <div class="section">
                             <p>Description</p>
@@ -99,16 +102,13 @@
                             <input id="header-name" placeholder="Header Name" class="input-small" type="text" ng-model="header.name"/><input id="header-value" placeholder="Header Value" type="text" ng-model="header.value"/><br/>
                             <a id="header-update" class="btn btn-inverse" ng-click="updateHeaders()"><i class="icon-plus-sign"></i> Add Header</a>
                         </div>
-                        <div class="section">
-                            <input ng-checked="service.is_active" type="checkbox" ng-model="service.is_active"/>&nbsp;Active
-                        </div>
                         <div class="section storage_name">
                             <p>Storage Name</p>
                             <input ng-model="service.storage_name" type="text"/>
                         </div>
                         <div class="section storage_type">
                             <p>Storage Type</p>
-                            <input ng-model="service.storage_type" type="text"/>
+                            <select ng-options="option.value as option.name for option in remoteOptions" ng-model="service.storage_type" type="text"></select>
                         </div>
                         <div class="section credentials">
                             <p>Credentials</p>
@@ -117,6 +117,9 @@
                         <div class="section native_format">
                             <p>Native Format</p>
                             <input ng-model="service.native_format" type="text"/>
+                        </div>
+                        <div class="section">
+                            <input ng-disabled = "service.is_system" ng-checked="service.is_active" type="checkbox" ng-model="service.is_active"/>&nbsp;Active
                         </div>
                         <div id="button_holder">
                             <a id="save_button" ng-click="create()" class="btn btn-primary">
