Swagger show() moved to navigation

--- a/navigation.html
+++ b/navigation.html
@@ -6,7 +6,7 @@
     <li onclick="setCurrentApp('services')" id="nav_services"><a href="#/service"><i class="icon icon-exchange"></i> <span>Services</span></a></li>
     <li onclick="setCurrentApp('files')" id="nav_files"><a href="#/file"><i class="icon icon-folder-open"></i> <span>Manage Files</span></a></li>
     <li onclick="setCurrentApp('schema')" id="nav_schema"><a href="#/schema"><i class="icon icon-table"></i> <span>Manage Data</span></a></li>
-    <li onclick="setCurrentApp('docs')" id="nav_docs"><a href="#/api"><i class="icon icon-book"></i> <span>API Documentation</span></a></li>
+    <li onclick="setCurrentApp('docs')" id="nav_docs"><a ng-click="loadSwagger()" href="#/api"><i class="icon icon-book"></i> <span>API Documentation</span></a></li>
     <li onclick="setCurrentApp('help')" id="nav_help"><a href="#/users"><i class="icon icon-question-sign"></i> <span>Help</span></a></li>
 
 </ul>
