--- a/services.html
+++ b/services.html
@@ -109,6 +109,17 @@
                         <div class="section storage_type">
                             <p>Storage Type</p>
                             <select ng-options="option.value as option.name for option in remoteOptions" ng-model="service.storage_type" type="text"></select>
+                            <div class=" well sub-section aws_info" ng-show="service.storage_type=='aws s3'">
+                                <label>Access Key</label><input type="text" ng-model="aws.access_key"/>
+                                <label>Secret Key</label><input type="text" ng-model="aws.secret_key"/>
+                                <label>Bucket Name</label><input type="text" ng-model="aws.bucket_name"/>
+
+                            </div>
+                            <div class=" well sub-section azure_info" ng-show="service.storage_type =='azure blob'">
+                                <label>Account Name</label><input type="text" ng-model="azure.acount_name"/>
+                                <label>Account Key</label><input type="text" ng-model="azure.acount_key"/>
+
+                            </div>
                         </div>
                         <div class="section credentials">
                             <p>Credentials</p>
