Refactoring to use CurrentServer

--- a/filemanager/editor.html
+++ b/filemanager/editor.html
@@ -15,10 +15,7 @@
             left: 0;
         }
     </style>
-
-
-    <!-- Initialize the system and start the application -->
-
+    <script src="/lib/web-core/js/utils.js"></script>
 </head>
 <body>
 <div id="editor"></div>
