--- a/services.html
+++ b/services.html
@@ -116,8 +116,8 @@
 
                             </div>
                             <div class=" well sub-section azure_info" ng-show="service.storage_type =='azure blob'">
-                                <label>Account Name</label><input type="text" ng-model="azure.acount_name"/>
-                                <label>Account Key</label><input type="text" ng-model="azure.acount_key"/>
+                                <label>Account Name</label><input type="text" ng-model="azure.account_name"/>
+                                <label>Account Key</label><input type="text" ng-model="azure.account_key"/>
 
                             </div>
                         </div>
