--- a/swagger.html
+++ b/swagger.html
@@ -1,3 +1,3 @@
 <div ng-controller="SwaggerCtrl" id="swagger" style="display:none">
-    <iframe frameBorder=0 src=""></iframe>
-</div>
+    <iframe style="display:none" frameBorder=0 src=""></iframe>
+</div> 
