--- a/swagger.html
+++ b/swagger.html
@@ -1,3 +1,3 @@
-<div ng-controller="SwaggerCtrl" id="swagger" style="display:none">
+<div ng-controller="SwaggerCtrl" id="swagger" class="well" style="display:none">
     <iframe style="display:none" frameBorder=0 src=""></iframe>
 </div> 
