--- a/filemanager/index.html
+++ b/filemanager/index.html
@@ -82,8 +82,7 @@
                                        <div class="btn-group">
                                            <a id="mkdir" href="#" class="btn btn-small fmActionButton"><i
                                                    class="icon-folder-close"></i>&nbsp;Create Folder</a>&nbsp;
-                                           <a id="importfile" data-toggle="modal" href="#fileModal"
-                                              class="btn btn-small fmActionButton"><i
+                                           <a id="importfile" href="#" class="btn btn-small fmActionButton"><i
                                                    class="icon-cloud-upload"></i>&nbsp;Upload File</a>&nbsp;
                                            <a id="exportzip" href="#" class="btn btn-small fmActionButton"><i
                                                    class="icon-cloud-download"></i>&nbsp;Download Zip</a>&nbsp;
@@ -93,7 +92,9 @@
                                    </div>
 								</span>
                     </div>
-                    <div class="cLeft cLM1 fmToolbar">
+                    <div class="cLeft cLM1 fmToolbarPlus3">
+                        <a id="home" href="#" class="btn btn-small fmActionButton"><i
+                                class="icon-home"></i>&nbsp;Home</a>&nbsp;
                         PATH:&nbsp;<span id="breadcrumbs">/</span>
                     </div>
                     <div class="cClear"><!--  --></div>
