fix for changing access causing doubling of accesses

--- a/roles.html
+++ b/roles.html
@@ -130,7 +130,7 @@
                                                     ng-options="component.name as component.label for component in components">
 
                                             </select>
-                                            <select ng-model="service_access.access" style="width:140px;" ng-change="editServiceAccess();">
+                                            <select ng-model="service_access.access" style="width:140px;">
                                                 <option value='Full Access' selected>Full Access</option>
                                                 <option value='Read and Write' selected>Read and Write</option>
                                                 <option value='Read Only' selected>Read Only</option>
