--- a/swagger/index.html
+++ b/swagger/index.html
@@ -16,50 +16,24 @@
     <script src='swagger-ui.js' type='text/javascript'></script>
     <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
 
-    <style type="text/css">
-        .swagger-ui-wrap {
-            max-width: 960px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .icon-btn {
-            cursor: pointer;
-        }
-
-        #message-bar {
-            min-height: 30px;
-            text-align: center;
-            padding-top: 10px;
-        }
-
-        .message-success {
-            color: #89BF04;
-        }
-
-        .message-fail {
-            color: #cc0000;
-        }
-    </style>
-
     <script type="text/javascript">
-        $(function () {
-            window.swaggerUi = new SwaggerUi({
-                discoveryUrl:location.protocol + "//" + location.host + "/rest/",
+	$(function () {
+	    window.swaggerUi = new SwaggerUi({
+                discoveryUrl:"http://localhost/rest/",
                 apiKey:"swagger",
                 dom_id:"swagger-ui-container",
                 supportHeaderParams: false,
                 supportedSubmitMethods: ['get', 'post', 'put'],
                 onComplete: function(swaggerApi, swaggerUi){
-                    if(console) {
+                	if(console) {
                         console.log("Loaded SwaggerUI")
                         console.log(swaggerApi);
                         console.log(swaggerUi);
                     }
-                    $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+                  $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
                 },
                 onFailure: function(data) {
-                    if(console) {
+                	if(console) {
                         console.log("Unable to Load SwaggerUI");
                         console.log(data);
                     }
@@ -75,7 +49,7 @@
 
 <body>
 
-
+DreamFactory LIVE API Documentation , built with Swagger.
 <div id="message-bar" class="swagger-ui-wrap">
     &nbsp;
 </div>
