--- a/swagger/index.html
+++ b/swagger/index.html
@@ -2,53 +2,12 @@
 <html>
 <head>
     <title>Swagger UI</title>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
     <link href='css/hightlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
     <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-    <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-    <script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
-    <script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
-    <script src='lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-    <script src='lib/handlebars-1.0.rc.1.js' type='text/javascript'></script>
-    <script src='lib/underscore-min.js' type='text/javascript'></script>
-    <script src='lib/backbone-min.js' type='text/javascript'></script>
-    <script src='lib/swagger.js' type='text/javascript'></script>
-    <script src='swagger-ui.js' type='text/javascript'></script>
-    <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
 
-    <script type="text/javascript">
-	$(function () {
-	    window.swaggerUi = new SwaggerUi({
-                discoveryUrl:"http://localhost/rest/",
-                apiKey:"swagger",
-                dom_id:"swagger-ui-container",
-                supportHeaderParams: false,
-                supportedSubmitMethods: ['get', 'post', 'put'],
-                onComplete: function(swaggerApi, swaggerUi){
-                	if(console) {
-                        console.log("Loaded SwaggerUI")
-                        console.log(swaggerApi);
-                        console.log(swaggerUi);
-                    }
-                  $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
-                },
-                onFailure: function(data) {
-                	if(console) {
-                        console.log("Unable to Load SwaggerUI");
-                        console.log(data);
-                    }
-                },
-                docExpansion: "none"
-            });
-
-            window.swaggerUi.load();
-        });
-
-    </script>
 </head>
 
 <body>
-
 DreamFactory LIVE API Documentation , built with Swagger.
 <div id="message-bar" class="swagger-ui-wrap">
     &nbsp;
@@ -57,7 +16,46 @@ DreamFactory LIVE API Documentation , built with Swagger.
 <div id="swagger-ui-container" class="swagger-ui-wrap">
 
 </div>
+<script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+<script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
+<script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
+<script src='lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+<script src='lib/handlebars-1.0.rc.1.js' type='text/javascript'></script>
+<script src='lib/underscore-min.js' type='text/javascript'></script>
+<script src='lib/backbone-min.js' type='text/javascript'></script>
+<script src='lib/swagger.js' type='text/javascript'></script>
+<script src='swagger-ui.js' type='text/javascript'></script>
+<script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
 
+<script type="text/javascript">
+    $(function () {
+        window.swaggerUi = new SwaggerUi({
+            discoveryUrl:location.protocol + "//" + location.host + "/rest/",
+            apiKey:"swagger",
+            dom_id:"swagger-ui-container",
+            supportHeaderParams: false,
+            supportedSubmitMethods: ['get', 'post', 'put'],
+            onComplete: function(swaggerApi, swaggerUi){
+                if(console) {
+                    console.log("Loaded SwaggerUI")
+                    console.log(swaggerApi);
+                    console.log(swaggerUi);
+                }
+                $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+            },
+            onFailure: function(data) {
+                if(console) {
+                    console.log("Unable to Load SwaggerUI");
+                    console.log(data);
+                }
+            },
+            docExpansion: "none"
+        });
+
+        window.swaggerUi.load();
+    });
+
+</script>
 </body>
 
 </html>
