--- a/import.html
+++ b/import.html
@@ -5,7 +5,7 @@
         <form id="upload-file-form" name="upload-file-form"  ng-controller = 'FileCtrl' action="/rest/app/?app_name=admin" method="POST" enctype="multipart/form-data" target="importFileIframe">
             <input id="fileInput" type="file" name="files" style="width:300px;"/><button ng-click='uploadPackageFile()' class="btn btn-primary">Upload</button>
         </form>
-        <iframe style="display:none" frameBorder="0" id="importFileIframe" name="importFileIframe" src="about:blank" width="100%" height="70px"></iframe>
+        <iframe style="display:none" frameBorder="0" id="importFileIframe" name="importFileIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
     </div>
     <div class="section">
         <h5><span style="font-weight:bold;">OR</span> enter the URL for a .dfpkg file</h5>
@@ -15,6 +15,6 @@
             <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
             - A sample application showing how to make RESTful calls to your DreamFactory Services Platform (DSP).
         </form>
-        <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" width="100%" height="70px"></iframe>
+        <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
     </div>
 </div>
