Added app-helloworld as a clickable  sample app.

--- a/import.html
+++ b/import.html
@@ -12,8 +12,10 @@
         <form id="upload-url-form" name="upload-url-form"  ng-controller = 'FileCtrl' action="/rest/app/?app_name=admin" method="POST" target="importUrlIframe">
             <input id="urlInput" type="text" name="url" style="width:300px;"/><button ng-click='uploadPackageUrl()' class="btn btn-primary">Upload</button><br/>
             Sample Apps:<br/>
+            <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-helloworld/raw/master/helloworld.dfpkg')">Hello World</a>
+            - A tiny sample application showing how to make a RESTful call to your DreamFactory Services Platform (DSP).<br/>
             <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
-            - A sample application showing how to make RESTful calls to your DreamFactory Services Platform (DSP).
+            - A sample application showing how to perform CRUD operations on your DreamFactory Services Platform (DSP).
         </form>
         <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
     </div>
