Added app-swagger as a clickable  sample app.

--- a/import.html
+++ b/import.html
@@ -15,7 +15,9 @@
             <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-helloworld/raw/master/helloworld.dfpkg')">Hello World</a>
             - A tiny sample application showing how to make a RESTful call to your DreamFactory Services Platform (DSP).<br/>
             <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
-            - A sample application showing how to perform CRUD operations on your DreamFactory Services Platform (DSP).
+            - A sample application showing how to perform CRUD operations on your DreamFactory Services Platform (DSP).<br/>
+            <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
+            - Live API documentation for the DreamFactory Services Platform (DSP), built with Swagger.
         </form>
         <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
     </div>
